fix text alignment about page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,3 +104,6 @@
     font-size: 1.5em;
     color: #C966D6;
 }
+#about-body {
+    text-align: left;
+}
